# Backtest-Data-Module

./: .env.demo.example  .env.live.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.py  example_backtest.py  example_orchestrator.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_platform_v2_baseline.py
data_ingestion/: __init__.py
data_storage/: __init__.py
docs/: api.md  architecture.md  cli.md  configuration.md  data-lake.md  deployment.md  development.md  index.md  market-data-ingestion.md  operations.md  risk-controls.md
metrics/: test_cpcv_summary.json  test_ray_cpcv_summary.json  test_ray_walk_forward_summary.json  test_to_json_summary.json  test_walk_forward_summary.json
src/backtest_data_module/: data_handler.py
src/backtest_data_module/backtesting/: engine.py  execution.py  orchestrator.py  strategy.py
src/backtest_data_module/data_ingestion/: __init__.py
src/backtest_data_module/data_storage/: catalog.py  storage_backend.py
src/backtest_data_module/pipelines/: catalog_drift.py  data_pipeline.py  hit_stats.py  (+1 more)
src/okx_trading_platform/: __init__.py
tests/: conftest.py  test_control_api_platform.py  test_data_handler.py  test_platform_cli.py
tests/adapters/: test_okx_client.py  test_okx_ingestion.py  test_okx_smoke.py  test_orderbook.py
tests/api/: test_control_api.py
tests/application/: test_signals.py
tests/backtesting/: test_gpu_backtest.py  test_vectorized_backtest.py
tests/cli/: test_cli.py
tests/data_storage/: test_timescalewarm_pg.py
tests/domain/: test_risk.py
tests/services/: test_compose_contract.py  test_service_apps.py
tests/shared/: test_data_lake.py
tests/trading/: test_okx.py  test_orderbook.py  test_risk.py
(+63 files in other folders)
