[tool.poetry]
name = "okx-trading-platform"
version = "0.1.0"
description = "An OKX demo/live automated trading platform."
authors = ["OpenAI Codex <codex@openai.com>"]
license = "MIT"

packages = [{ include = "okx_trading_platform", from = "src" }]

[tool.poetry.scripts]
okx-platform = "okx_trading_platform.cli.app:app"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "*"
boto3 = "*"
duckdb = "*"
fastapi = "*"
httpx = "*"
kafka-python = "*"
prometheus-client = "*"
psycopg = {extras = ["binary"], version = "*"}
pyarrow = "*"
pyyaml = "*"
redis = "*"
sqlalchemy = "*"
typer = "*"
uvicorn = "*"
websockets = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {extras = ["python"], version = "*"}
pytest = "*"
pytest-asyncio = "*"
pytest-httpx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
